syntax = "proto3";

message Exchange {
  optional bytes id = 1;
  optional PublicKey pubkey = 2;
}

enum KeyType {
  RSA = 0;
  Ed25519 = 1;
  Secp256k1 = 2;
  ECDSA = 3;
}

message PublicKey {
  KeyType Type = 1;
  bytes Data = 2;
}